# Velox

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
config/: log.yml
include/: config.hpp  log.hpp  singleton.hpp  threadpool.hpp  util.hpp
src/: config.cpp  log.cpp  main.cpp  threadpool.cpp  util.cpp
test/: CMakeLists.txt
test/config/: config_test.cpp  log.yml  server.yml
test/log/: log.yml  log_test.cpp
test/threadpool/: run_threadpool_test.py  threadpool.yml  threadpool_test.cpp
